cluster/apps/networking/external-services/pve/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pve
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: pve.${SECRET_PRIVATE_DOMAIN}.
  ports:
    - name: http
      port: &port 8006
      protocol: TCP
      targetPort: *port
