cluster/apps/networking/external-services/pve/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app pve
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/ssl-proxy-headers: "X-Forwarded-Proto:https"
    hajimari.io/enable: "true"
    hajimari.io/icon: "server"
    hajimari.io/group: "networking"
spec:
  ingressClassName: "traefik"
  rules:
    - host: &host "pve.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8006
  tls:
    - hosts:
        - *host
      secretName: pve-tls
